2007-04-21  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, win32/wasap/wasap.c, win32/wasap/wasap.rc,
  win32/wasap/resource.h, win32/wasap/wasap.ico, win32/wasap/play.ico,
  win32/wasap/stop.ico, win32/wasap/README, win32/wasap/.cvsignore:
  moved WASAP-specific files to a separate directory

* win32/Makefile, win32/settings.rc, win32/settings.h, win32/winamp/in_asap.c,
  win32/foobar2000/foo_asap.cpp: song time limit setting for Winamp
  and foobar2000 plugins


2006-09-17  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, win32/wasap.rc, win32/foobar2000/foo_asap.cpp: slight clean-up


2006-08-07  Piotr Fusik  <fox@scene.pl>
* win32/wasap.c: restore tray icon after Explorer restart


2006-05-22  Piotr Fusik  <fox@scene.pl>
* asap.c, asap2wav.c: minor code improvements


2006-05-14  Piotr Fusik  <fox@scene.pl>
* asap.h, win32/wasap.rc: wasap.rc now takes version numbers from asap.h

* INSTALL: sf.net switched to per-project CVS server addresses

* TODO: updated


2006-04-17  Piotr Fusik  <fox@scene.pl>
* win32/foobar2000/foo_asap.cpp, win32/Makefile, win32/foobar2000/README,
  INSTALL: upgraded to foobar2000 0.9


2006-04-15  Piotr Fusik  <fox@scene.pl>
* win32/wasap.c, win32/wasap.rc, win32/resource.h: sample rate selection
  (44100 Hz or 48000 Hz)


2006-04-13  Piotr Fusik  <fox@scene.pl>
* TODO: updated

* win32/Makefile: distribute TODO with binary releases


2006-01-31  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, win32/foobar2000/foo_asap.cpp, xmms/libasap.c:
  added ASAP_IsOurFile(); the XMMS plugin now supports TM8

* asap.h, asap2wav.c, win32/wasap.c, win32/winamp/in_asap.c,
  win32/foobar2000/foo_asap.cpp, xmms/libasap.c: ASAP_MODULE_MAX

* win32/wasap.c: middle-click opens subsong menu

* xmms/libasap.map, Makefile.in: added linker script to strip dynamic symbols

* xmms/libasap.c: use open/read/close (#define USE_STDIO to get
  fopen/fread/fclose back); prefixed function names with "asap_" to prevent
  collision with system pause()

